# dsl

./: pyproject.toml
data/: migration.py
data/museum/data/: s01-cb.csv  s06-npg.json  s11-s-19-artists.json  s15-s-detroit-institute-of-art.json  s21-s-met.json  s27-s-the-huntington.json  s28-wildlife-art.csv  s29-gilcrease.csv
data/museum/descriptions/: s01-cb.json  s02-dma.json  s03-ima-artists.json  s04-ima-artworks.json  s05-met.json  s06-npg.json  s07-s-13.json  s08-s-17-edited.json  s09-s-18-artists.json  s11-s-19-artists.json  s12-s-19-artworks.json  s13-s-art-institute-of-chicago.json  s14-s-california-african-american.json  s15-s-detroit-institute-of-art.json  s16-s-hammer.json  s17-s-houston-museum-of-fine-arts.json  s18-s-indianapolis-artists.json  s19-s-indianapolis-artworks.json  s20-s-lacma.json  s21-s-met.json  s22-s-moca.json  s23-s-national-portrait-gallery.json  s24-s-norton-simon.json  s25-s-oakland-museum-paintings.json  s26-s-san-francisco-moma.json  s27-s-the-huntington.json  s28-wildlife-art.json  s29-gilcrease.json
data/museum/tables/: s01-cb.json  s02-dma.json  s03-ima-artists.json  s04-ima-artworks.json  s05-met.json  s06-npg.json  s07-s-13.json  s08-s-17-edited.json  s09-s-18-artists.json  s11-s-19-artists.json  s12-s-19-artworks.json  s13-s-art-institute-of-chicago.json  s14-s-california-african-american.json  s15-s-detroit-institute-of-art.json  s16-s-hammer.json  s17-s-houston-museum-of-fine-arts.json  s18-s-indianapolis-artists.json  (+11 more)
dsl/: input.py  sm_type_db.py  typer.py
scripts_dsl/: pretrained.py
tests/: import_test.py
(+38 files in other folders)
